fix: changing overflow on table from scroll to auto to see if fixes mobile scrolling issue

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -7,7 +7,7 @@
   border-radius: 20px;
   z-index: 98;
   height: calc(100% - 10px);
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-bottom: 10px;
   overflow-x: hidden;
 }
